--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
         let countdown;
         let timeRemaining = 60; // 默认 1 分钟（秒）
         let initialTime = 60;   // 存储用户设置的初始时间
+        let isCountingUp = false; // 标记是否为正计时模式
+        let countUpStartTime = 0; // 正计时开始的时间
 
         const timerDisplay = document.getElementById('timer');
         const settingsButton = document.getElementById('settings-button');
@@ -286,32 +288,49 @@
 
         // 以 mm:ss 格式显示时间
         function displayTime(seconds) {
-            const minutes = Math.floor(seconds / 60);
-            const remainderSeconds = seconds % 60;
-            const display = `${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
+            const absoluteSeconds = Math.abs(seconds);
+            const minutes = Math.floor(absoluteSeconds / 60);
+            const remainderSeconds = absoluteSeconds % 60;
+            const display = `${seconds < 0 ? '-' : ''}${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
             timerDisplay.textContent = display;
         }
 
         // 计时器逻辑
         function startTimer() {
             clearInterval(countdown);
-            const now = Date.now();
-            const then = now + timeRemaining * 1000;
-            displayTime(timeRemaining);
+
+            // 如果处于正计时模式，则继续正计时
+            if (isCountingUp) {
+                countUpStartTime = Date.now() - timeRemaining * 1000;
+            } else {
+                const now = Date.now();
+                const then = now + timeRemaining * 1000;
+                displayTime(timeRemaining);
+
+                // 申请屏幕唤醒锁
+                requestWakeLock();
+
+                countdown = setInterval(() => {
+                    timeRemaining = Math.round((then - Date.now()) / 1000);
+                    if (timeRemaining < 0) {
+                        // 倒计时结束，切换到正计时模式
+                        isCountingUp = true;
+                        timeRemaining = 0;
+                        countUpStartTime = Date.now();
+                    }
+                    displayTime(timeRemaining);
+                }, 1000);
+                return;
+            }
+
+            // 正计时逻辑
+            countdown = setInterval(() => {
+                timeRemaining = Math.round((Date.now() - countUpStartTime) / 1000);
+                displayTime(timeRemaining);
+            }, 1000);
 
             // 申请屏幕唤醒锁
             requestWakeLock();
-
-            countdown = setInterval(() => {
-                timeRemaining = Math.round((then - Date.now()) / 1000);
-                if (timeRemaining < 0) {
-                    clearInterval(countdown);
-                    // 计时结束后释放唤醒锁
-                    releaseWakeLock();
-                    return;
-                }
-                displayTime(timeRemaining);
-            }, 1000);
         }
 
         function pauseTimer() {
@@ -322,6 +341,7 @@
         function resetTimer() {
             clearInterval(countdown);
             timeRemaining = initialTime;
+            isCountingUp = false;
             displayTime(timeRemaining);
             releaseWakeLock();
         }
@@ -354,6 +374,7 @@
             if (!isNaN(minutes) && minutes >= 0) {
                 timeRemaining = Math.round(minutes * 60);
                 initialTime = timeRemaining;
+                isCountingUp = false;
                 displayTime(timeRemaining);
             }
 
