--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         :root {
             --vh: 1vh;
             --vw: 1vw;
-            --timer-font-size: calc(var(--vh) * 18);
+            --timer-font-size: calc(var(--vh) * 35);
             --timer-font-size-min: 20px;
             --bg-color: #000000;
             --timer-color: #FFFFFF;
@@ -47,7 +47,7 @@
             height: calc(var(--vh) * 100);
         }
         #timer {
-            font-size: calc(var(--vw) * 20);
+            font-size: calc(var(--vw) * 35);
             margin: 0;
             color: var(--timer-color);
             line-height: 1;
@@ -142,7 +142,7 @@
             margin-top: 1em;
         }
         .settings-buttons button {
-            padding: 0.5em;
+            padding: 1em;
             background-color: var(--accent-color);
             color: #fff;
             border: none;
@@ -150,6 +150,7 @@
             cursor: pointer;
             width: 45%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            font-size: 1.2em;
         }
         @media (orientation: portrait) {
             .settings-content {
@@ -213,7 +214,7 @@
                 let timerFontSize = vw * 35;
                 document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
             } else {
-                let timerFontSize = vh * 18;
+                let timerFontSize = vh * 35;
                 document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
             }
         }
