--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- 适配移动设备 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <!-- 启用全屏显示 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- 设置状态栏颜色 -->
     <meta name="theme-color" content="#000000">
+    <!-- 链接到 manifest 文件 -->
     <link rel="manifest" href="manifest.json">
+    <!-- iOS 图标 -->
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
     <title>倒计时</title>
     <style>
         :root {
             --vh: 1vh;
             --vw: 1vw;
-            --timer-font-size: calc(var(--vw) * 40);
+            --timer-font-size: calc(var(--vh) * 80);
             --bg-color: #000000;
             --timer-color: #FFFFFF;
             --control-bg-color: #333;
@@ -104,7 +109,7 @@
             background-color: #2c2c2c;
             padding: 1.5em;
             border-radius: 15px;
-            width: 90%;
+            width: 100%;
             max-width: 350px;
             text-align: center;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
@@ -121,66 +126,48 @@
             color: #fff;
         }
         .settings-content input {
-            width: calc(100% - 2em);
+            width: calc(100% - 1em);
             padding: 0.5em;
             margin-bottom: 1em;
             border: none;
             border-radius: 5px;
             background-color: #444;
             color: #fff;
-            text-align: center;
-            box-sizing: border-box;
+            text-align: center; /* 居中显示输入的数字 */
         }
-        .settings-buttons {
-            display: flex;
-            justify-content: space-between;
+        #close-settings {
             margin-top: 1em;
-        }
-        .settings-buttons button {
-            padding: 0.6em;
+            padding: 0.7em;
             background-color: var(--accent-color);
             color: #fff;
             border: none;
             border-radius: 10px;
             cursor: pointer;
-            width: 45%;
+            width: 100%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            font-size: 1.1em;
         }
-        .install-prompt {
+        /* 添加到主屏幕提示样式 */
+        #install-prompt {
             position: fixed;
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             background-color: var(--control-bg-color);
             color: var(--control-text-color);
-            padding: 15px 25px;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: none;
             z-index: 1001;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-            font-size: 1.2em;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-        .install-prompt button {
-            margin-left: 15px;
-            padding: 8px 15px;
+        #install-prompt button {
+            margin-left: 10px;
+            padding: 5px 10px;
             background-color: var(--accent-color);
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 1em;
-        }
-        @media (orientation: portrait) {
-            .settings-content {
-                width: 80%;
-                max-width: 300px;
-            }
-            .install-prompt {
-                font-size: 1em;
-                padding: 10px 20px;
-            }
         }
     </style>
 </head>
@@ -189,6 +176,7 @@
     <div class="controls">
         <button id="settings-button" aria-label="Settings">
             <svg viewBox="0 0 24 24">
+                <!-- 齿轮图标 -->
                 <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9L19.95 7.05L17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5L13.5 2L12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2L5.5 3.5L5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05L0.5 9.9L2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1L2.05 16.95L4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5L8.5 22L10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22L16.5 20.5L16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95L21.5 14.1L19.43 12.97Z" />
             </svg>
         </button>
@@ -218,49 +206,49 @@
             <input type="color" id="bg-color-input" value="#000000"/>
             <label for="font-color-input">字体颜色</label>
             <input type="color" id="font-color-input" value="#FFFFFF"/>
-            <div class="settings-buttons">
-                <button id="cancel-settings">取消</button>
-                <button id="save-settings">保存</button>
-            </div>
+            <button id="close-settings">关闭</button>
         </div>
     </div>
 
-    <div class="install-prompt" id="install-prompt">
-        <span>为了获得更好的体验，请将此应用添加到主屏幕。这样您可以以类似原生App的全屏模式打开它。</span>
+    <!-- 添加到主屏幕提示 -->
+    <div id="install-prompt">
+        添加到主屏幕可获得全屏显示的体验。
         <button id="close-prompt">关闭</button>
     </div>
 
     <script>
+        // 设置 --vh 和 --vw 变量，解决移动端 100vh 问题
         function setVh() {
             let vh = window.innerHeight * 0.01;
             let vw = window.innerWidth * 0.01;
             document.documentElement.style.setProperty('--vh', `${vh}px`);
             document.documentElement.style.setProperty('--vw', `${vw}px`);
+
+            // 检测屏幕方向
+            if (window.innerWidth < window.innerHeight) {
+                // 竖屏，使用 vw 计算字体大小
+                let timerFontSize = vw * 30; // 增大倍数以适应竖屏
+                document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
+            } else {
+                // 横屏，使用 vh 计算字体大小
+                let timerFontSize = vh * 80; // 保持横屏字体大小
+                document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
+            }
         }
-        function resetToDefaultSize() {
-            document.documentElement.style.setProperty('--timer-font-size', `calc(var(--vw) * 40)`);
-        }
-        window.addEventListener('resize', () => {
-            setVh();
-            resetToDefaultSize();
-        });
-        window.addEventListener('orientationchange', () => {
-            setVh();
-            resetToDefaultSize();
-        });
+        window.addEventListener('resize', setVh);
+        window.addEventListener('orientationchange', setVh);
         setVh();
 
         let countdown;
-        let timeRemaining = 60;
-        let initialTime = 60;
-        let isCountingUp = false;
-        let countUpStartTime = 0;
+        let timeRemaining = 60; // 默认 1 分钟（秒）
+        let initialTime = 60;   // 存储用户设置的初始时间
+        let isCountingUp = false; // 标记是否为正计时模式
+        let countUpStartTime = 0; // 正计时开始的时间
 
         const timerDisplay = document.getElementById('timer');
         const settingsButton = document.getElementById('settings-button');
         const settingsPopup = document.getElementById('settings');
-        const cancelSettingsButton = document.getElementById('cancel-settings');
-        const saveSettingsButton = document.getElementById('save-settings');
+        const closeSettingsButton = document.getElementById('close-settings');
         const startButton = document.getElementById('start');
         const pauseButton = document.getElementById('pause');
         const resetButton = document.getElementById('reset');
@@ -272,6 +260,7 @@
 
         let wakeLock = null;
 
+        // 申请屏幕唤醒锁
         async function requestWakeLock() {
             try {
                 if ('wakeLock' in navigator) {
@@ -281,13 +270,14 @@
                     });
                     console.log('Screen Wake Lock acquired');
                 } else {
-                    console.log('Screen Wake Lock API not supported. Please adjust your device settings to prevent screen lock.');
+                    console.log('Screen Wake Lock API not supported');
                 }
             } catch (err) {
                 console.error(`${err.name}, ${err.message}`);
             }
         }
 
+        // 释放屏幕唤醒锁
         async function releaseWakeLock() {
             if (wakeLock !== null) {
                 await wakeLock.release();
@@ -296,6 +286,7 @@
             }
         }
 
+        // 以 mm:ss 格式显示时间
         function displayTime(seconds) {
             const absoluteSeconds = Math.abs(seconds);
             const minutes = Math.floor(absoluteSeconds / 60);
@@ -304,12 +295,15 @@
             timerDisplay.textContent = display;
         }
 
+        // 倒计时逻辑
         function startTimer() {
             clearInterval(countdown);
-            isCountingUp = false;
+            isCountingUp = false; // 确保从倒计时模式开始
             const now = Date.now();
             const then = now + timeRemaining * 1000;
             displayTime(timeRemaining);
+
+            // 申请屏幕唤醒锁
             requestWakeLock();
 
             countdown = setInterval(() => {
@@ -317,12 +311,14 @@
                 if (timeRemaining >= 0) {
                     displayTime(timeRemaining);
                 } else {
+                    // 倒计时结束，切换到正计时模式
                     clearInterval(countdown);
                     startCountUp();
                 }
             }, 1000);
         }
 
+        // 正计时逻辑
         function startCountUp() {
             isCountingUp = true;
             countUpStartTime = Date.now();
@@ -345,35 +341,30 @@
             releaseWakeLock();
         }
 
+        // 当页面可见性改变时，重新申请唤醒锁
         document.addEventListener('visibilitychange', () => {
             if (wakeLock !== null && document.visibilityState === 'visible') {
                 requestWakeLock();
             }
         });
 
+        // 事件监听
         settingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'flex';
-            document.body.style.overflow = 'hidden';
         });
 
-        cancelSettingsButton.addEventListener('click', () => {
+        closeSettingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'none';
-            document.body.style.overflow = '';
-            resetToDefaultSize();
-        });
-
-        saveSettingsButton.addEventListener('click', () => {
-            settingsPopup.style.display = 'none';
-            document.body.style.overflow = '';
-            applySettings();
-            resetToDefaultSize();
+            applySettings(); // 关闭设置时立即生效
         });
 
         startButton.addEventListener('click', startTimer);
         pauseButton.addEventListener('click', pauseTimer);
         resetButton.addEventListener('click', resetTimer);
 
+        // 应用设置
         function applySettings() {
+            // 更新计时器时间
             const minutes = parseFloat(timeInput.value);
             if (!isNaN(minutes) && minutes >= 0) {
                 timeRemaining = Math.round(minutes * 60);
@@ -381,16 +372,26 @@
                 isCountingUp = false;
                 displayTime(timeRemaining);
             }
+
+            // 更新背景颜色
             document.documentElement.style.setProperty('--bg-color', bgColorInput.value);
+
+            // 更新字体颜色
             document.documentElement.style.setProperty('--timer-color', fontColorInput.value);
+        }
+
+        // 检测是否从主屏幕启动，显示提示
+        if (!window.navigator.standalone) {
+            installPrompt.style.display = 'block';
         }
 
         closePromptButton.addEventListener('click', () => {
             installPrompt.style.display = 'none';
         });
 
+        // 初始显示
         displayTime(timeRemaining);
-        timeInput.value = '1';
+        timeInput.value = '1'; // 设置默认输入值为 1 分钟
     </script>
 </body>
 </html>
