--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         :root {
             --vh: 1vh;
             --vw: 1vw;
-            --timer-font-size: calc(var(--vh) * 80);
+            --timer-font-size: calc(var(--vh) * 50); /* 默认字体大小，适应不同屏幕 */
             --bg-color: #000000;
             --timer-color: #FFFFFF;
             --control-bg-color: #333;
@@ -101,16 +101,14 @@
             background-color: rgba(0, 0, 0, 0.9);
             justify-content: center;
             align-items: center;
-            padding: 1em;
             z-index: 1000;
-            overflow-y: auto;
         }
         .settings-content {
             background-color: #2c2c2c;
             padding: 1.5em;
             border-radius: 15px;
             width: 100%;
-            max-width: 350px;
+            max-width: 90%; /* 调整为百分比以适应不同屏幕 */
             text-align: center;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
         }
@@ -126,14 +124,14 @@
             color: #fff;
         }
         .settings-content input {
-            width: calc(100% - 1em);
+            width: 100%;
             padding: 0.5em;
             margin-bottom: 1em;
             border: none;
             border-radius: 5px;
             background-color: #444;
             color: #fff;
-            text-align: center; /* 居中显示输入的数字 */
+            text-align: center;
         }
         #close-settings {
             margin-top: 1em;
@@ -146,29 +144,6 @@
             width: 100%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-        /* 添加到主屏幕提示样式 */
-        #install-prompt {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: var(--control-bg-color);
-            color: var(--control-text-color);
-            padding: 10px 20px;
-            border-radius: 5px;
-            display: none;
-            z-index: 1001;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
-        #install-prompt button {
-            margin-left: 10px;
-            padding: 5px 10px;
-            background-color: var(--accent-color);
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
@@ -177,7 +152,7 @@
         <button id="settings-button" aria-label="Settings">
             <svg viewBox="0 0 24 24">
                 <!-- 齿轮图标 -->
-                <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9L19.95 7.05L17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5L13.5 2L12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2L5.5 3.5L5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05L0.5 9.9L2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1L2.05 16.95L4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5L8.5 22L10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22L16.5 20.5L16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95L21.5 14.1L19.43 12.97Z" />
+                <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9L19.95 7.05L17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5L13.5 2L12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2L5.5 3.5L5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05L0.5 9.9L2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1L2.05 16.95L4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5L8.5 22L10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22L16.5 20.5L16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95L21.5 14.1L19.43 12.97Z"/>
             </svg>
         </button>
         <button id="start" aria-label="Start">
@@ -210,12 +185,6 @@
         </div>
     </div>
 
-    <!-- 添加到主屏幕提示 -->
-    <div id="install-prompt">
-        添加到主屏幕可获得全屏显示的体验。
-        <button id="close-prompt">关闭</button>
-    </div>
-
     <script>
         // 设置 --vh 和 --vw 变量，解决移动端 100vh 问题
         function setVh() {
@@ -223,44 +192,18 @@
             let vw = window.innerWidth * 0.01;
             document.documentElement.style.setProperty('--vh', `${vh}px`);
             document.documentElement.style.setProperty('--vw', `${vw}px`);
-
-            // 检测屏幕方向
-            if (window.innerWidth < window.innerHeight) {
-                // 竖屏，使用 vw 计算字体大小
-                let timerFontSize = vw * 30; // 增大倍数以适应竖屏
-                document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
-            } else {
-                // 横屏，使用 vh 计算字体大小
-                let timerFontSize = vh * 80; // 保持横屏字体大小
-                document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
-            }
+            document.documentElement.style.setProperty('--timer-font-size', `${Math.min(vw * 40, vh * 80)}px`);
         }
+
         window.addEventListener('resize', setVh);
         window.addEventListener('orientationchange', setVh);
         setVh();
 
         let countdown;
-        let timeRemaining = 60; // 默认 1 分钟（秒）
-        let initialTime = 60;   // 存储用户设置的初始时间
-        let isCountingUp = false; // 标记是否为正计时模式
-        let countUpStartTime = 0; // 正计时开始的时间
-
-        const timerDisplay = document.getElementById('timer');
-        const settingsButton = document.getElementById('settings-button');
-        const settingsPopup = document.getElementById('settings');
-        const closeSettingsButton = document.getElementById('close-settings');
-        const startButton = document.getElementById('start');
-        const pauseButton = document.getElementById('pause');
-        const resetButton = document.getElementById('reset');
-        const timeInput = document.getElementById('time-input');
-        const bgColorInput = document.getElementById('bg-color-input');
-        const fontColorInput = document.getElementById('font-color-input');
-        const installPrompt = document.getElementById('install-prompt');
-        const closePromptButton = document.getElementById('close-prompt');
-
+        let timeRemaining = 60;
+        let initialTime = 60;
         let wakeLock = null;
 
-        // 申请屏幕唤醒锁
         async function requestWakeLock() {
             try {
                 if ('wakeLock' in navigator) {
@@ -269,15 +212,12 @@
                         console.log('Screen Wake Lock released');
                     });
                     console.log('Screen Wake Lock acquired');
-                } else {
-                    console.log('Screen Wake Lock API not supported');
                 }
             } catch (err) {
                 console.error(`${err.name}, ${err.message}`);
             }
         }
 
-        // 释放屏幕唤醒锁
         async function releaseWakeLock() {
             if (wakeLock !== null) {
                 await wakeLock.release();
@@ -286,24 +226,17 @@
             }
         }
 
-        // 以 mm:ss 格式显示时间
         function displayTime(seconds) {
-            const absoluteSeconds = Math.abs(seconds);
-            const minutes = Math.floor(absoluteSeconds / 60);
-            const remainderSeconds = absoluteSeconds % 60;
-            const display = `${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
-            timerDisplay.textContent = display;
+            const minutes = Math.floor(seconds / 60);
+            const remainderSeconds = seconds % 60;
+            timerDisplay.textContent = `${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
         }
 
-        // 倒计时逻辑
         function startTimer() {
             clearInterval(countdown);
-            isCountingUp = false; // 确保从倒计时模式开始
             const now = Date.now();
             const then = now + timeRemaining * 1000;
             displayTime(timeRemaining);
-
-            // 申请屏幕唤醒锁
             requestWakeLock();
 
             countdown = setInterval(() => {
@@ -311,20 +244,8 @@
                 if (timeRemaining >= 0) {
                     displayTime(timeRemaining);
                 } else {
-                    // 倒计时结束，切换到正计时模式
                     clearInterval(countdown);
-                    startCountUp();
                 }
-            }, 1000);
-        }
-
-        // 正计时逻辑
-        function startCountUp() {
-            isCountingUp = true;
-            countUpStartTime = Date.now();
-            countdown = setInterval(() => {
-                const elapsed = Math.round((Date.now() - countUpStartTime) / 1000);
-                displayTime(elapsed);
             }, 1000);
         }
 
@@ -336,62 +257,42 @@
         function resetTimer() {
             clearInterval(countdown);
             timeRemaining = initialTime;
-            isCountingUp = false;
             displayTime(timeRemaining);
             releaseWakeLock();
         }
 
-        // 当页面可见性改变时，重新申请唤醒锁
         document.addEventListener('visibilitychange', () => {
             if (wakeLock !== null && document.visibilityState === 'visible') {
                 requestWakeLock();
             }
         });
 
-        // 事件监听
         settingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'flex';
         });
 
         closeSettingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'none';
-            applySettings(); // 关闭设置时立即生效
+            applySettings();
         });
 
         startButton.addEventListener('click', startTimer);
         pauseButton.addEventListener('click', pauseTimer);
         resetButton.addEventListener('click', resetTimer);
 
-        // 应用设置
         function applySettings() {
-            // 更新计时器时间
             const minutes = parseFloat(timeInput.value);
             if (!isNaN(minutes) && minutes >= 0) {
                 timeRemaining = Math.round(minutes * 60);
                 initialTime = timeRemaining;
-                isCountingUp = false;
                 displayTime(timeRemaining);
             }
-
-            // 更新背景颜色
             document.documentElement.style.setProperty('--bg-color', bgColorInput.value);
-
-            // 更新字体颜色
             document.documentElement.style.setProperty('--timer-color', fontColorInput.value);
         }
 
-        // 检测是否从主屏幕启动，显示提示
-        if (!window.navigator.standalone) {
-            installPrompt.style.display = 'block';
-        }
-
-        closePromptButton.addEventListener('click', () => {
-            installPrompt.style.display = 'none';
-        });
-
-        // 初始显示
         displayTime(timeRemaining);
-        timeInput.value = '1'; // 设置默认输入值为 1 分钟
+        timeInput.value = '1';
     </script>
 </body>
 </html>
