--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             padding: 1.5em;
             border-radius: 15px;
             width: 100%;
-            max-width: 90%; /* 调整为百分比以适应不同屏幕 */
+            max-width: 90%;
             text-align: center;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
         }
@@ -151,7 +151,6 @@
     <div class="controls">
         <button id="settings-button" aria-label="Settings">
             <svg viewBox="0 0 24 24">
-                <!-- 齿轮图标 -->
                 <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9L19.95 7.05L17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5L13.5 2L12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2L5.5 3.5L5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05L0.5 9.9L2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1L2.05 16.95L4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5L8.5 22L10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22L16.5 20.5L16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95L21.5 14.1L19.43 12.97Z"/>
             </svg>
         </button>
@@ -186,7 +185,6 @@
     </div>
 
     <script>
-        // 设置 --vh 和 --vw 变量，解决移动端 100vh 问题
         function setVh() {
             let vh = window.innerHeight * 0.01;
             let vw = window.innerWidth * 0.01;
