--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
         .settings-popup {
             display: none;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            bottom: 0;
+            left: 0;
+            right: 0;
+            top: 0;
             background-color: rgba(0, 0, 0, 0.9);
             justify-content: center;
             align-items: center;
@@ -145,6 +146,7 @@
             width: 100%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
+        /* 添加到主屏幕提示样式 */
         #install-prompt {
             position: fixed;
             bottom: 20px;
@@ -174,7 +176,8 @@
     <div class="controls">
         <button id="settings-button" aria-label="Settings">
             <svg viewBox="0 0 24 24">
-                <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9L19.95 7.05L17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5L13.5 2L12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2L5.5 3.5L5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05L0.5 9.9L2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1L2.05 16.95L4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5L8.5 22L10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22L16.5 20.5L16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95L21.5 14.1L19.43 12.97Z"/>
+                <!-- 齿轮图标 -->
+                <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9L19.95 7.05L17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5L13.5 2L12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2L5.5 3.5L5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05L0.5 9.9L2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1L2.05 16.95L4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5L8.5 22L10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22L16.5 20.5L16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95L21.5 14.1L19.43 12.97Z" />
             </svg>
         </button>
         <button id="start" aria-label="Start">
@@ -214,17 +217,21 @@
     </div>
 
     <script>
+        // 设置 --vh 和 --vw 变量，解决移动端 100vh 问题
         function setVh() {
             let vh = window.innerHeight * 0.01;
             let vw = window.innerWidth * 0.01;
             document.documentElement.style.setProperty('--vh', `${vh}px`);
             document.documentElement.style.setProperty('--vw', `${vw}px`);
 
+            // 检测屏幕方向
             if (window.innerWidth < window.innerHeight) {
-                let timerFontSize = vw * 30;
+                // 竖屏，使用 vw 计算字体大小
+                let timerFontSize = vw * 30; // 增大倍数以适应竖屏
                 document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
             } else {
-                let timerFontSize = vh * 80;
+                // 横屏，使用 vh 计算字体大小
+                let timerFontSize = vh * 80; // 保持横屏字体大小
                 document.documentElement.style.setProperty('--timer-font-size', `${timerFontSize}px`);
             }
         }
@@ -233,10 +240,10 @@
         setVh();
 
         let countdown;
-        let timeRemaining = 60;
-        let initialTime = 60;
-        let isCountingUp = false;
-        let countUpStartTime = 0;
+        let timeRemaining = 60; // 默认 1 分钟（秒）
+        let initialTime = 60;   // 存储用户设置的初始时间
+        let isCountingUp = false; // 标记是否为正计时模式
+        let countUpStartTime = 0; // 正计时开始的时间
 
         const timerDisplay = document.getElementById('timer');
         const settingsButton = document.getElementById('settings-button');
@@ -253,6 +260,7 @@
 
         let wakeLock = null;
 
+        // 申请屏幕唤醒锁
         async function requestWakeLock() {
             try {
                 if ('wakeLock' in navigator) {
@@ -269,6 +277,7 @@
             }
         }
 
+        // 释放屏幕唤醒锁
         async function releaseWakeLock() {
             if (wakeLock !== null) {
                 await wakeLock.release();
@@ -277,6 +286,7 @@
             }
         }
 
+        // 以 mm:ss 格式显示时间
         function displayTime(seconds) {
             const absoluteSeconds = Math.abs(seconds);
             const minutes = Math.floor(absoluteSeconds / 60);
@@ -285,13 +295,15 @@
             timerDisplay.textContent = display;
         }
 
+        // 倒计时逻辑
         function startTimer() {
             clearInterval(countdown);
-            isCountingUp = false;
+            isCountingUp = false; // 确保从倒计时模式开始
             const now = Date.now();
             const then = now + timeRemaining * 1000;
             displayTime(timeRemaining);
 
+            // 申请屏幕唤醒锁
             requestWakeLock();
 
             countdown = setInterval(() => {
@@ -299,12 +311,14 @@
                 if (timeRemaining >= 0) {
                     displayTime(timeRemaining);
                 } else {
+                    // 倒计时结束，切换到正计时模式
                     clearInterval(countdown);
                     startCountUp();
                 }
             }, 1000);
         }
 
+        // 正计时逻辑
         function startCountUp() {
             isCountingUp = true;
             countUpStartTime = Date.now();
@@ -327,39 +341,46 @@
             releaseWakeLock();
         }
 
+        // 当页面可见性改变时，重新申请唤醒锁
         document.addEventListener('visibilitychange', () => {
             if (wakeLock !== null && document.visibilityState === 'visible') {
                 requestWakeLock();
             }
         });
 
+        // 事件监听
         settingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'flex';
         });
 
         closeSettingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'none';
-            applySettings();
+            applySettings(); // 关闭设置时立即生效
         });
 
         startButton.addEventListener('click', startTimer);
         pauseButton.addEventListener('click', pauseTimer);
         resetButton.addEventListener('click', resetTimer);
 
+        // 应用设置
         function applySettings() {
+            // 更新计时器时间
             const minutes = parseFloat(timeInput.value);
             if (!isNaN(minutes) && minutes >= 0) {
                 timeRemaining = Math.round(minutes * 60);
                 initialTime = timeRemaining;
                 isCountingUp = false;
-                resetTimer();
+                displayTime(timeRemaining);
             }
 
+            // 更新背景颜色
             document.documentElement.style.setProperty('--bg-color', bgColorInput.value);
+
+            // 更新字体颜色
             document.documentElement.style.setProperty('--timer-color', fontColorInput.value);
-            document.documentElement.style.setProperty('--timer-font-size', `calc(var(--vh) * 80)`);
         }
 
+        // 检测是否从主屏幕启动，显示提示
         if (!window.navigator.standalone) {
             installPrompt.style.display = 'block';
         }
@@ -368,8 +389,9 @@
             installPrompt.style.display = 'none';
         });
 
+        // 初始显示
         displayTime(timeRemaining);
-        timeInput.value = '1';
+        timeInput.value = '1'; // 设置默认输入值为 1 分钟
     </script>
 </body>
 </html>
